Version 3.53

  [INTERNALS]  
  - Correct t/tmpdir.t MANIFEST entry. (RT#64949)
  - Update minimum required Perl version to be Perl 5.8, which
    has been out nearly 10 years. (Mark Stosberg)

Version 3.52, Jan 24, 2011
  
  [DOCUMENTATION]
  - The documentation for multi-line header handling was been updated to reflect
    the changes in 3.51. (Mark Stosberg, ntyni@iki.fi) 

  [INTERNALS]
  - Add missing t/tmpfile.t file. (RT#64949)  
  - Fix warning in t/cookie.t (RT#64570, Chris Williams, Rainer Tammer, Mark Stosberg)     
  - Fixed logic bug in t/multipart_init.t (RT#64261, Niko Tyni)

Version 3.51, Jan 5, 2011

  [NEW FEATURES]  
  - A new option to set $CGI::Carp::TO_BROWSER = 0, allows you to explicitly  
    exclude a particular scope from triggering printing to the browser when
    fatatlsToBrowser is set. (RT#62783, Thanks to papowell) 
  - The <script> tag now supports the "charset" attribute. 
    (RT#62907, Thanks to Fabrice Metge)
  - In CGI::Cookie, "Max-Age" is now supported for better spec compliance. 
    (Mark Stosberg)

  [BUG FIXES]  
  - Setting charset() now works for all content types, not just "text/*". 
    (RT#57945, Thanks to Yanick and Gerv.)
  - support for user temporary directories ($HOME/tmp) was commented out
    in 2.61 but the documentation wasn't updated (Peter Gervai, Niko Tyni)
  - setting $CGITempFile::TMPDIRECTORY before loading CGI.pm has been
    working but undocumented since 3.12 (which listed it in Changes as
    $CGI::TMPDIRECTORY) (Peter Gervai, Niko Tyni)
  - unfortunately the previous change broke the runtime check for looking
    for a new temporary directory if the current one suddenly became
    unwritable (Peter Gervai, Niko Tyni)
  - A bug was fixed in CGI::Carp triggered by certain death cases in
    the BEGIN phase of parent classes. 
    (RT#57224, Thanks to UNERA, Yanick Champoux, Mark Stosberg)
  - CGI::Cookie->new() now follows the documentation and returns undef 